# wavs-foundry-template

./: .env.example  .gitignore  .gitmodules  .taskrc.yml  CLAUDE.md  Cargo.toml  DEVWORKSPACE-README.md  Makefile  README.md  README_SEC_3.md  README_SETUP.md  README_WAVS.md  TMP.sh  Taskfile.yml  claude.md  config.toml  dev_notes.md  docker-compose-multi.yml  docker-compose.telemetry.yml  docker-compose.yml  foundry.toml  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  remappings.txt  script.sh  tmp  tsconfig.json  wavs.toml
.cursor/rules/: ai.mdc  blockchain-interactions.mdc  commands.mdc  component-rules.mdc  component-structure.mdc  component.mdc  cursor-rules.mdc  custom-components.mdc  data-encoding.mdc  docs-check-rule.mdc  documentation.mdc  environment-variables.mdc  error-handling.mdc  helpers-utils.mdc  http-requests.mdc  input-handling.mdc  logging.mdc  makefile-commands.mdc  network-requests.mdc  overview.mdc  project-setup.mdc  repository-structure.mdc  security.mdc  service.mdc  submission-contracts.mdc  submission.mdc  template.mdc  testing.mdc  trigger-data-handling.mdc  trigger-handling.mdc  triggers.mdc  variables.mdc  workflows.mdc
.docker/: service-cid
.github/: single-wavs-image-verifier.sh
.github/docs-ci/: README.md  archive.py  main.py
.github/workflows/: config.json  contracts.yml  docs-ci.yml  e2e.yml  rust.yml  wavs-image-version-verifier.yml
app/: Cargo.toml
app/src/: main.rs
compiled/: README.md
components/aggregator/: Cargo.toml  Makefile
components/aggregator/src/: lib.rs
components/eth-price-oracle/: Cargo.toml  README.md  config.json
components/eth-price-oracle/src/: bindings.rs  lib.rs  trigger.rs
components/eth-trigger-weather/: Cargo.toml
components/eth-trigger-weather/src/: bindings.rs  lib.rs  trigger.rs
components/evm-price-oracle/: Cargo.toml  Makefile
components/evm-price-oracle/src/: bindings.rs  lib.rs  solidity.rs  trigger.rs
components/evm-strategy/: Cargo.toml
components/evm-strategy/src/: lib.rs  vvv.rs
components/fibonacci/: Cargo.toml  Enarx.toml  README.md
components/fibonacci/src/: main.rs
components/golang-eth-price-oracle/: GO_README.md  Makefile  README.md  add.wasm  config.json  example:component@0.1.0.wasm  go.mod  go.sum  main.go
components/golang-eth-price-oracle/src/: handler.go  main.go  types.go
components/golang-eth-price-oracle/submit/: contract.go
components/golang-eth-price-oracle/wit/: README.md  add.wit
components/golang-evm-price-oracle/: Makefile  README.md  go.mod  go.sum
components/golang-evm-price-oracle/src/: main.go
components/js-eth-price-oracle/: Makefile  README.md  config.json  index.ts  package-lock.json  package.json  trigger.ts
components/js-evm-price-oracle/: Makefile  README.md  index.ts
components/number-squared/: Cargo.toml
components/number-squared/src/: lib.rs
components/py-evm-price-oracle/: Makefile  README.md  app.py  cmc.py  requirements.txt
components/python-eth-price-oracle/: README.md  cmc.py  main.py  requirements.txt
components/python-eth-price-oracle/example/: __init__.py
components/usdt-balance/: Cargo.toml
components/usdt-balance/src/: lib.rs
components/weather-oracle/: Cargo.toml
components/weather-oracle/src/: lib.rs
components/weather-service/: Cargo.toml
components/weather-service/src/: lib.rs
components/zip-weather-oracle/: Cargo.toml
components/zip-weather-oracle/src/: lib.rs  trigger.rs
config/: components.json
crates/bindings/: Cargo.toml
crates/bindings/src/: addressupgradeable.rs  checkpointsupgradeable.rs  ecdsastakeregistry.rs  ecdsaupgradeable.rs  isimplesubmit.rs  isimpletrigger.rs  iwavsservice.rs  layerservicemanager.rs  lib.rs  math.rs  mathupgradeable.rs  (+13 more)
deploy/: build-service.ts  config.ts  constants.ts  create-aggregator.ts  create-deployer.ts  create-operator.ts  deploy-contracts.ts  deploy-script.ts  env.ts  types.ts  upload-components.ts  upload-service.ts  utils.ts
deploy/templates/: aggregator.env  aggregator.start.sh  operator.env  operator.start.sh
docs/: benefits.mdx  custom-components.mdx  design.mdx  how-it-works.mdx  index.mdx  llm-docs.mdx  overview.mdx  state.mdx
docs/handbook/: ai.mdx  commands.mdx  overview.mdx  service.mdx  submission.mdx  template.mdx  triggers.mdx  workflows.mdx
docs/resources/: llms.mdx
docs/tutorial/: 1-overview.mdx  2-setup.mdx  3-project.mdx  4-component.mdx  5-build.mdx  6-run-service.mdx  7-prediction.mdx
multiple-example/: .env1  .env2  Makefile  README.md  create-aggregator.sh  create_operators.sh  start.sh  start_multi.sh
script/: Common.s.sol  Deploy.s.sol  DeployLendingSystem.s.sol  InteractLendingSystem.s.sol  ShowResult.s.sol  Trigger.s.sol  WavsSubmit.s.sol  avs-signing-key.sh  build-service.sh  build_service.sh  create-aggregator.sh  create-deployer.sh  create-operator.sh  deploy-contracts.sh  deploy-script.sh  fund-account.sh  get-deploy-status.sh  get-ipfs-gateway.sh  get-registry.sh  get-rpc.sh  get-wasi-namespace.sh  go.sh  ipfs-upload.sh  js.sh  run_lending_demo.sh  start_all.sh  upload-to-wasi-registry.sh
script/template/: .env.example.operator
src/: LayerServiceManager.sol  WavsSubmit.sol  WavsTrigger.sol
src/common/: CmdRunner.sol
src/contracts/: MockERC20.sol  MockLendingProtocol.sol  SimpleVault.sol  VaultLendingStrategy.sol  WavsSubmit.sol  WavsTrigger.sol
src/interfaces/: ILayerServiceHandler.sol  ILayerServiceManager.sol  ITypes.sol  IWAVSServiceHandler.sol  IWavsSubmit.sol  IWavsTrigger.sol
src/script/: ShowResult.s.sol  Trigger.s.sol
taskfile/: config.yml  deploy.yml  env.yml
test/unit/: WavsTrigger.t.sol
test_utils/: README.md  validate_component.sh
testnet/: .env.example  .env.example.operator  README.md  create-aggregator.sh  create-deployer.sh  create-operator.sh  docker-compose-multi.yml  start.sh
tools/: upgrade.sh
wavs-staking-template/: .wavs_env  create_service.md  dev_notes.md  docker-compose.yml  service.json  service.json.template  trigger_contract.sol  wavs.toml
wavs-staking-template/aggregator/: docker-compose.yml
wavs-staking-template/old/: wavs.toml
(+7 files in other folders)
