[workspace]
members = [
    "app",
    "crates/bindings",
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"


[workspace.dependencies]
bindings = { path = "crates/bindings" }

# alloy = { git = "https://github.com/alloy-rs/alloy", rev = "v0.9.2", features = ["sol-types", "contract"] }
# wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }
# serde = { version = "1.0.211", features = ["derive"] }
# serde_json = "1.0.127"
layer-wasi = { path = "lib/WAVS/sdk/wasi" }
# ---
clap = { version = "4.5.20", features = ["derive", "env"] }
anyhow = "1.0.90"
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
dirs = "5.0.1"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = { version = "0.15.7", features = ["cli"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
sha2 = "0.10.8"
hex = "0.4.3"
thiserror = "1.0.42"
redb = { version = "2.1" }
axum = { version = "0.7.7", features = ["macros"] }
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
tower = { version = "0.5.1", features = ["util"] }
http-body-util = "0.1.2"
wildmatch = "2.4.0"
layer-climb = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.3" }
layer-climb-proto = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.3" }
layer-climb-address = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.3" }
layer-climb-config = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.3" }
ctrlc = "3.4.5"
tempfile = "3.13.0"
lavs-apis = { git = "https://github.com/Lay3rLabs/avs-toolkit", tag = "v0.2.1" }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
rand = "0.8.5"
cfg-if = "1.0.0"
wasmtime = { version = "24.0.0", features = [
  "cache",
  "component-model",
  "runtime",
  "std",
] } # add "async" ?
wasmtime-wasi-http = "24.0.0"
wasmtime-wasi = { version = "24.0.0", default-features = true }
lru = "0.12.1"
rayon = "1.5.1"
walkdir = "2.5.0"
url = "2.5.3"
bip39 = "2.0.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
criterion = "0.5.1"
chrono = "0.4.38"
shellexpand = "3.1.0"
wit-bindgen-rt = {version = "0.37.0", features = ["bitflags"]}
wit-bindgen = "0.37.0"
alloy = { version = "0.6.4", features = ["full", "signer-mnemonic", "node-bindings"] }
alloy-rlp = {version = "0.3.10", features = ["derive"]}
alloy-primitives = "0.8.15"
alloy-sol-macro = "0.8.15"
alloy-sol-types = "0.8.15"
alloy-rpc-types = "0.9.2"
alloy-json-rpc = "0.9.2"
alloy-provider = "0.9.2"
alloy-transport-http = "0.9.2"
alloy-transport = "0.9.2"
alloy-rpc-client = "0.9.2"
tendermint-rpc = "0.40.1"
tendermint = { version = "0.40.1", default-features = false}
wstd = "0.4.0"
wasi = "0.13.3"
cosmwasm-std = {version = "2.2.0", features = ["stargate"]}
cosmwasm-schema = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
fs_extra = "1.3.0"
async-trait = "0.1.85"
tower-service = "0.3.3"
