[workspace]
members = [
    "app",
    "crates/bindings",
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.80.0"


[workspace.dependencies]
bindings = { path = "crates/bindings" }
wit-bindgen-rt = {version = "0.37.0", features = ["bitflags"]}
wit-bindgen = "0.37.0"
wstd = "0.5.1"
wasi = "0.14.0"
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
# WAVS imports
wavs-wasi-chain = { path = "./lib/WAVS/packages/wasi-chain" } # wavs-wasi-chain = "0.3.0-alpha1"
alloy-contract = "0.9.2"
alloy-json-rpc = "0.9.2"
alloy-primitives = "0.8.15"
alloy-provider = "0.9.2"
alloy-rlp = {version = "0.3.10", features = ["derive"]}
alloy-rpc-client = "0.9.2"
alloy-rpc-types = "0.9.2"
alloy-sol-macro = { version = "0.8.15", features = ["json"]}
alloy-sol-types = "0.8.15"
alloy-transport = "0.9.2"
alloy-transport-http = "0.9.2"
anyhow = "1.0.90"
async-trait = "0.1.85"
cfg-if = "1.0.0"
cosmwasm-std = {version = "2.2.0", features = ["stargate"]}
layer-climb = "0.3.6"
tendermint = { version = "0.40.1", default-features = false}
tendermint-rpc = "0.40.1"
tower-service = "0.3.3"
url = "2.5.3"
wasmtime-wasi = { version = "24.0.0", default-features = true }
