[package]
name = "aggregator"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:aggregator"
target = "wavs:aggregator@=1.3.0"

[dependencies]
alloy-primitives = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wavs-wasi-utils = { workspace = true }
wstd = { workspace = true }
