[package]
name = "eth-trigger-weather"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = {version = "0.37.0", features = ["bitflags"]}
layer-wasi = { path = "../../lib/WAVS/sdk/wasi" }
serde = { version = "1.0.211", features = ["derive"] }
serde_json = "1.0.127"
reqwest = { version = "0.12.9", features = ["json"] }
alloy-sol-macro = { version = "0.8.15", features = ["json"]}
wstd = { workspace = true }
layer-climb = { git = "https://github.com/Lay3rLabs/climb", tag = "v0.3.3" }
alloy-sol-types = "0.8.15"
anyhow = "1.0.90"
alloy-contract = "0.9.2"
# example-helpers = { path = "../../lib/WAVS/examples/components/_helpers" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:eth-trigger-weather"
