[package]
name = "usdt-balance"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = {workspace = true}
wavs-wasi-chain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = "0.8.4"
alloy-provider = { version = "0.11.1", default-features = false, features = ["rpc-api"] }
alloy-network = "0.11.1"
alloy-rpc-types = "0.11.1"
hex = "0.4.3"
anyhow = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:usdt-balance"
target = "wavs:worker/layer-trigger-world@0.3.0"